# mirsg-project-manager

./: .gitignore  LICENSE  README.md  example.secrets.toml  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: conf.py
src/mirsg_project_manager/: __init__.py  config.py  main.py  site_management.py
src/mirsg_project_manager/_compat/: __init__.py  typing.py
tests/: test_package.py
